[package]
name = "worlderust"
version = "0.1.0"
authors = ["gustafbergmark <gbergmar@kth.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nohash-hasher = "0.2.0"
rayon = "1.5.3"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"

